--- a/index2.html
+++ b/index2.html
@@ -192,7 +192,7 @@
 						bottom: '20%'
 					},
 					legend: {
-						data: ['参数人次覆盖率','参训人数覆盖率'],
+						data: ['参训人次覆盖率','参训人数覆盖率'],
 						top:'10%',
 						textStyle:{
 							color: '#ffffff'//字体颜色
