--- a/index2.html
+++ b/index2.html
@@ -248,7 +248,7 @@
 						},
 					}],
 					series: [{
-						name: '参数人次覆盖率',
+						name: '参训人次覆盖率',
 						type: 'line',
 						smooth:true,
 						label: {
