--- a/index3.html
+++ b/index3.html
@@ -618,7 +618,7 @@
                     bottom: '30%'
                 },
                 legend: {
-                    data: ['参训人次比率','参训人数比率','参训人次', '参训人数'],
+                    data: ['参训人数比率','参训人次比率','参训人次', '参训人数'],
                     top:'6%',
                     textStyle:{
                         color: '#ffffff'//字体颜色
@@ -703,7 +703,7 @@
                     },
                 }],
                 series: [{
-                    name: '参训人数比率',
+                    name: '参训人次比率',
                     type: 'line',
                     smooth:true,
                     label: {
@@ -726,7 +726,7 @@
                     
                     data: persentSystem5
                 }, {
-                    name: '参训人次比率',
+                    name: '参训人数比率',
                     
                     type: 'line',
                     smooth:true,
@@ -849,7 +849,7 @@
                     bottom: '30%'
                 },
                 legend: {
-                    data: ['参训人次比率','参训人数比率','参训人次', '参训人数'],
+                    data: ['参训人数比率','参训人次比率','参训人次', '参训人数'],
                     top:'6%',
                     textStyle:{
                         color: '#ffffff'//字体颜色
@@ -935,7 +935,7 @@
                     },
                 }],
                 series: [{
-                    name: '参训人数比率',
+                    name: '参训人次比率',
                     type: 'line',
                     smooth:true,
                     label: {
@@ -957,7 +957,7 @@
                     },
                     data: persentSystem6
                 }, {
-                    name: '参训人次比率',
+                    name: '参训人数比率',
                     type: 'line',
                     smooth:true,
                     label: {
@@ -1079,7 +1079,7 @@
                     bottom: '30%'
                 },
                 legend: {
-                    data: ['参训人次比率','参训人数比率','参训人次', '参训人数'],
+                    data: ['参训人数比率','参训人次比率','参训人次', '参训人数'],
                     top:'6%',
                     textStyle:{
                         color: '#ffffff'//字体颜色
@@ -1167,7 +1167,7 @@
                     },
                 }],
                 series: [{
-                    name: '参训人数比率',
+                    name: '参训人次比率',
                     type: 'line',
                     smooth:true,
                     label: {
@@ -1189,7 +1189,7 @@
                     },
                     data: persentSystem7
                 }, {
-                    name: '参训人次比率',
+                    name: '参训人数比率',
                     type: 'line',
                     smooth:true,
                     label: {
@@ -1310,7 +1310,7 @@
                     bottom: '30%'
                 },
                 legend: {
-                    data: ['参训人次比率','参训人数比率','参训人次', '参训人数'],
+                    data: ['参训人数比率','参训人次比率','参训人次', '参训人数'],
                     top:'6%',
                     textStyle:{
                         color: '#ffffff'//字体颜色
@@ -1398,7 +1398,7 @@
                     },
                 }],
                 series: [{
-                    name: '参训人数比率',
+                    name: '参训人次比率',
                     type: 'line',
                     smooth:true,
                     barWidth: 10,
@@ -1421,7 +1421,7 @@
                     },
                     data: persentSystem8
                 }, {
-                    name: '参训人次比率',
+                    name: '参训人数比率',
                     type: 'line',
                     smooth:true,
                     label: {
